# integer-logarithms

./: .gitignore  .travis.yml  cabal.haskell-ci  cabal.project  changelog.md  haskell-ci.config  integer-logarithms.cabal  stack.yaml
.github/workflows/: haskell-ci.yml
benchmark/: Benchmark.hs  results.csv
benchmark/Math/NumberTheory/Powers/: IntegerBench.hs  NaturalBench.hs
src/Math/NumberTheory/: Logarithms.hs
src/Math/NumberTheory/Powers/: Integer.hs  Natural.hs
test-suite/: Orphans.hs  Test.hs
test-suite/Math/NumberTheory/: LogarithmsTests.hs  TestUtils.hs
test-suite/Math/NumberTheory/Powers/: NaturalTests.hs
